--- a/page.html
+++ b/page.html
@@ -115,7 +115,7 @@
             
             // แสดงสถานะกำลังคิด
             const loadingId = "loading-" + Date.now();
-            chatBox.innerHTML += `<div class="message ai-msg" id="${loadingId}"><i>กำลังวิเคราะห์รูปภาพ...</i></div>`;
+            chatBox.innerHTML += `<div class="message ai-msg" id="${loadingId}"><i>กำลังวิเคราะห์...</i></div>`;
             chatBox.scrollTop = chatBox.scrollHeight;
 
             try {
